index.html: changed layout, leagues.js: change day

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,14 +86,12 @@ main {
 .layer {
     background: rgba( 235, 255, 255, 0.7 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
-    border-radius: 10px;
-    border: 2px solid rgba( 255, 255, 255, 0.18 );
+    backdrop-filter: blur( 10px );
+    border-radius: 5px;
+    border: 1px solid rgba( 255, 255, 255, 0.20 );
     position: absolute;
     top: 25%;
-    bottom: 4rem;
-    right: 5%;
+    left: 5%;
     width: 90%;
     height: 50%;
 }
