--- a/src/styles/league.css
+++ b/src/styles/league.css
@@ -9,7 +9,7 @@
 
 
 .listContainer {
-    width: 70vw;
+    width: 80vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,14 +63,14 @@ form {
 }
 
 #league {
-    width: 70vw;
+    width: 80vw;
     height: 2rem;
 }
 
 .splash {
     width: 100%;
     height: 30rem;
-    width: 70vw;
+    width: 80vw;
     margin: auto;
 }
 
@@ -79,7 +79,7 @@ form {
 }
 
 .content {
-    width: 70vw;
+    width: 80vw;
     margin: auto;
     padding: 2rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -92,7 +92,7 @@ form {
     justify-items: center; 
     align-items: center;
     grid-template-columns: 1fr 1fr 11fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    height: 2.5rem;
+    height: 3.5rem;
     border-bottom: 1px solid #cdcdcd;
     font-size: 1rem;
 }
@@ -109,9 +109,8 @@ form {
     display: grid;
     justify-items: center; 
     align-items: center;
-
-    grid-template-columns: 1fr 4fr 3fr 4fr 1fr 8fr;
-    height: 2.5rem;
+    grid-template-columns: 1fr 5fr 3fr 5fr 1fr 6fr;
+    height: 3.5rem;
     border-bottom: 1px solid #cdcdcd;
     font-size: 1rem;
     
@@ -123,13 +122,33 @@ form {
     display: grid;
     justify-items: center; 
     align-items: center;
-
-    grid-template-columns: 1fr 4fr 2fr 4fr 1fr 7fr 3fr;
-    height: 2.5rem;
+    grid-template-columns: 1fr 5fr 3fr 5fr 1fr 6fr;
+    height: 3.5rem;
     border-bottom: 1px solid #cdcdcd;
-    font-size: 1rem;
-    
+    font-size: 1rem;  
 }
+
+@media screen and (max-width: 1200px) {
+    .upcomingListItem {
+        grid-template-columns: 1fr 5fr 3fr 5fr 1fr;
+    }
+
+    .matchdayListItem {
+        grid-template-columns: 1fr 5fr 3fr 5fr 1fr;
+    }
+
+    .width {
+        display: none;
+    }
+
+    .content, .splash{
+        width: 100vw;
+    }
+
+    .standingsListItem {
+        grid-template-columns: 1fr 1fr 3fr 1fr 1fr 1fr 1fr 1fr;
+    }
+} 
 
 h2 {
     margin-top: 2rem;
@@ -178,13 +197,14 @@ a {
 }
 
 .changeMatchday {
-    height: 2.5rem;
+    height: 3.5rem;
     background-color: black;
     margin-bottom: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    margin-bottom: 2rem;
 
 }
 
@@ -252,4 +272,15 @@ main {
     grid-template-rows: auto;
     gap: 2rem;
     margin-top: 11rem;
+}
+
+.tableListItem {
+    transition: all .1s ease-in-out;
+}
+
+.tableListItem:hover {
+    background-color: rgba(71, 72, 114, 0.4);
+    color: white;
+    font-weight: 700;
+    transform: scale(1.02);
 }
