--- a/src/styles/teams.css
+++ b/src/styles/teams.css
@@ -266,3 +266,9 @@ main {
     border-bottom: 1px solid #cdcdcd;
     font-size: 1rem;   
 }
+
+.backBtn {
+
+    width: 10rem;
+    height: 4rem;
+}
